syntax = "proto3";

package streams;

option go_package = "github.com/w-h-a/pkg/proto/streams";

// domain
message Event {
    string id = 1;
    string topic = 2;
    bytes payload = 3;
    int64 timestamp = 4;
    map<string,string> metadata = 5;
}

// produce request/response
message ProduceRequest {
    string topic = 1;
    bytes payload = 2;
    int64 timestampt = 3;
    map<string,string> metadata = 4;
}

message ProduceResponse {}

// consume request (stream Event response)
message ConsumeRequest {
    string topic = 1;
    string group = 2;
    int64 offset = 3;
    bool auto_ack = 4;
    int64 ack_wait = 5;
    int64 retry_limit = 6;
}
